# ds-service

./: .cpush.json5  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
cpp/: ds-server.cpp  ds-service.cpp  task_table.hpp
misc/: ds-service.proto  task_table.json5
python/ds_service_client/: __init__.py  client.py  ds-service.proto  ds_service_pb2.py  ds_service_pb2.pyi  ds_service_pb2_grpc.py  optuna_storage.py
scripts/: ds-server.def  gen_cppsoa.sh  gen_python_bindings.sh  pb-dev.sh
scripts/apptainer/: ds-server.def  ds-service.def  profiles-default  remotes.json
tests/: conftest.py  test_counter.py  test_journal.py  test_map.py  test_mutex.py  test_optuna_storage.py  test_tasks.py  test_time_series.py
