[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-service-client"
dynamic = ["version"]
authors = [
  { name="Parantapa Bhattacharya", email="pb@parantapa.net" },
]
description = "Python client for DS service."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "grpcio>=1.60",
    "protobuf>=6.31",
]

[project.urls]
Homepage = "https://github.com/parantapa/ds-service"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]
fallback_version = "1.0.0-dev"
